[gd_scene load_steps=5 format=3 uid="uid://dccutkhjc0ydt"]

[ext_resource type="Script" uid="uid://bs4ne54lnp0w0" path="res://scripts/player.gd" id="1_1yqnb"]
[ext_resource type="PackedScene" uid="uid://bgxm2iodfnqt1" path="res://scenes/force_indicator.tscn" id="2_dxnkl"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_k1vb1"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_r4x8p"]

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 1
collision_mask = 3
script = ExtResource("1_1yqnb")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_k1vb1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_r4x8p")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4)

[node name="InteractionRay" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -2)
collision_mask = 2
collide_with_areas = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ForceIndicator" parent="UI" instance=ExtResource("2_dxnkl")]
visible = false
